@@ -40,6 +40,15 @@
 # If run as a non-root user, this setting has no effect.
 #user mosquitto
 
+# The maximum number of messages currently inflight per client. This includes
+# messages that are partway through the handshakes for QoS>0 messages and those
+# that are being retried. Defaults to 10. Set to 0 for no maximum.
+#max_inflight_messages 10
+
+# The maximum number of messages to hold in a queue for a client that is
+# disconnected. Defaults to 100. Set to 0 for no maximum.
+#max_queued_messages 100
+
 # ======================================================================
 # Persistence
 # ======================================================================
@@ -128,8 +137,6 @@
 #connection_messages
 #listener
 #max_connections
-#max_inflight_messages
-#max_queued_messages
 #retained_persistence
 #trace_level
 #addresses
